--- a/config.yaml
+++ b/config.yaml
@@ -20,8 +20,6 @@ params:
     has_social: true
 disableKinds:
 - RSS
-- taxonomy
-- taxonomyTerm
 menu:
   main:
   - url: https://monolith.app.link/1Et7kyYZV1
@@ -48,3 +46,6 @@ privacy:
   youtube:
     disable: false
     privacyEnhanced: true
+  
+  taxonomies:
+  categories: categories
