--- a/config.yaml
+++ b/config.yaml
@@ -48,4 +48,7 @@ privacy:
     privacyEnhanced: true
   
   taxonomies:
-  categories: categories
+  categories:
+  - category1
+  - category2
+  - category3
