--- a/config.yaml
+++ b/config.yaml
@@ -29,6 +29,7 @@ menu:
     weight: 4
 description: 'Monolith provides a decentralised banking alternative: an Ethereum wallet
   paired with a crypto debit card to conveniently spend anywhere.'
+paginate: 25
 privacy:
   disqus:
     disable: true
